fixed issue with stretched img in safari

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -295,6 +295,7 @@ section {
         width: 100%;
         height: auto;
         box-shadow: 0 10px 20px -8px rgba(0, 0, 0, 0.3);
+        align-self: center;
     }
 }
 
